[build-system]
requires = ["setuptools", "cython"]
build-backend = "setuptools.build_meta"

[project]
name = "py-measuredns"
readme = "README.md"
version="0.0.1"
authors = [
  { name="Arnav Das", email="arnav.das88@gmail.com" },
]
description = "A python library to measure dns query latency, accurately"
requires-python = ">=3"
dependencies = ["dnspython", "wheel"]
classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Environment :: Console",
        "Environment :: No Input/Output (Daemon)",
        "Intended Audience :: Developers",
        "Intended Audience :: System Administrators",
        "License :: OSI Approved :: GNU AFFERO",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
all = [
    "dnspython", 
    "wheel",
    "pytest",
    "black",
    "isort",
    "mkdocs", 
    "mkdocs-material",
    "mkdocstrings[python]",
]
develop = [
    "dnspython", 
    "pytest",
    "black",
    "isort",
    "mkdocs", 
    "mkdocs-material",
    "mkdocstrings[python]",
]
doc = [
    "dnspython", 
    "mkdocs", 
    "mkdocs-material",
    "mkdocstrings[python]",
]

[project.urls]
"Homepage" = "https://github.com/indiainternetfoundation/py_measure_dns"
"Bug Tracker" = "https://github.com/indiainternetfoundation/py_measure_dns/issues"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests"
]